src/test/ui/feature-gates/feature-gate-allow_fail.stderr
error[E0658]: allow_fail attribute is currently unstable
  --> $DIR/feature-gate-allow_fail.rs:3:1
   |
LL | #[allow_fail]
   | ^^^^^^^^^^^^^
   |
   = note: for more information, see tracking issue #46488
   = help: add #![feature(allow_fail)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
